# c-codebase

./: CMakeLists.txt  README.md  log.h  math_utils.h  swap.h  timer.h  voidptr.h
BitArray/: BitArray.c  BitArray.h
Color/: Color.c  Color.h  README.md
DynamicArray/: DynamicArray.c  DynamicArray.h
Matrix/: Matrix.c  Matrix.h
Vector/: Vector.h  Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h
fileUtils/: fileUtils.c  fileUtils.h
memoryUtils/: memoryUtils.c  memoryUtils.h
stringUtils/: stringUtils.c  stringUtils.h
tests/: BitArrayTest.c  CMakeLists.txt  DynamicArrayTest.c  MatrixTest.c  VectorsTest.c  fileUtilsTest.c  stringUtilsTest.c
tests/res/: fileUtilsTest_testfile.txt
